Finish to implement the API and the configuration
